--- a/OpticalValleyUnite/Classes/UI/Home/View/YQOtherHomeNavView.xib
+++ b/OpticalValleyUnite/Classes/UI/Home/View/YQOtherHomeNavView.xib
@@ -6,56 +6,87 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
-        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="8t4-HR-gud">
+        <view contentMode="scaleToFill" id="8t4-HR-gud" customClass="YQOtherHomeNavView" customModule="OpticalValleyUnite" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="360" height="60"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <subviews>
-                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="wtj-uC-Yg9" customClass="YQOtherHomeNavView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                    <rect key="frame" x="0.0" y="0.0" width="100" height="60"/>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="r7Y-QJ-JaZ">
+                    <rect key="frame" x="0.0" y="0.0" width="56" height="60"/>
                     <subviews>
-                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gCs-zy-lai">
-                            <rect key="frame" x="37.5" y="12" width="25" height="25"/>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="DEg-6n-r1X">
+                            <rect key="frame" x="12" y="18" width="40" height="24"/>
                             <constraints>
-                                <constraint firstAttribute="width" secondItem="gCs-zy-lai" secondAttribute="height" id="XxC-bs-tKZ"/>
-                                <constraint firstAttribute="height" constant="25" id="fT5-bR-yh6"/>
+                                <constraint firstAttribute="width" constant="40" id="ORg-BH-hvp"/>
                             </constraints>
-                            <state key="normal" backgroundImage="all"/>
+                            <state key="normal" image="mess"/>
+                            <connections>
+                                <action selector="messageBtnClick:" destination="8t4-HR-gud" eventType="touchUpInside" id="yAJ-6I-twM"/>
+                            </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="全部" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rj8-PN-9nB">
-                            <rect key="frame" x="0.0" y="42" width="100" height="13.5"/>
-                            <fontDescription key="fontDescription" type="system" pointSize="11"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                     </subviews>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     <constraints>
-                        <constraint firstItem="gCs-zy-lai" firstAttribute="top" secondItem="wtj-uC-Yg9" secondAttribute="top" constant="12" id="25K-wY-ERH"/>
-                        <constraint firstItem="rj8-PN-9nB" firstAttribute="leading" secondItem="wtj-uC-Yg9" secondAttribute="leading" id="6sc-Mz-C4b"/>
-                        <constraint firstItem="rj8-PN-9nB" firstAttribute="top" secondItem="gCs-zy-lai" secondAttribute="bottom" constant="5" id="Pl0-Ym-xv3"/>
-                        <constraint firstAttribute="trailing" secondItem="rj8-PN-9nB" secondAttribute="trailing" id="PlZ-N7-rvB"/>
-                        <constraint firstAttribute="width" constant="100" id="vyS-5g-viW"/>
-                        <constraint firstItem="gCs-zy-lai" firstAttribute="centerX" secondItem="wtj-uC-Yg9" secondAttribute="centerX" id="ymm-P5-ODl"/>
+                        <constraint firstItem="DEg-6n-r1X" firstAttribute="centerY" secondItem="r7Y-QJ-JaZ" secondAttribute="centerY" id="hJp-bX-mkD"/>
+                        <constraint firstItem="DEg-6n-r1X" firstAttribute="leading" secondItem="r7Y-QJ-JaZ" secondAttribute="leading" constant="12" id="xuh-Ee-qwr"/>
                     </constraints>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="n2f-AX-hGn" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                    <rect key="frame" x="86" y="0.0" width="56" height="60"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="i4r-gE-h2t" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                    <rect key="frame" x="152" y="0.0" width="56" height="60"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ydf-S5-lxe" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                    <rect key="frame" x="218" y="0.0" width="56" height="60"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                </view>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ime-Nx-6Vo" customClass="HomeBtnView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                    <rect key="frame" x="284" y="0.0" width="56" height="60"/>
+                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                 </view>
             </subviews>
             <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
             <constraints>
-                <constraint firstItem="wtj-uC-Yg9" firstAttribute="top" secondItem="8t4-HR-gud" secondAttribute="top" id="CSF-qY-iTs"/>
-                <constraint firstItem="wtj-uC-Yg9" firstAttribute="leading" secondItem="8t4-HR-gud" secondAttribute="leading" id="Ye9-yJ-pxK"/>
-                <constraint firstAttribute="bottom" secondItem="wtj-uC-Yg9" secondAttribute="bottom" id="wXg-Ly-NBl"/>
+                <constraint firstItem="i4r-gE-h2t" firstAttribute="top" secondItem="8t4-HR-gud" secondAttribute="top" id="41c-IO-l9J"/>
+                <constraint firstAttribute="bottom" secondItem="ydf-S5-lxe" secondAttribute="bottom" id="6Or-Ga-AQJ"/>
+                <constraint firstAttribute="bottom" secondItem="ime-Nx-6Vo" secondAttribute="bottom" id="F4c-5I-f84"/>
+                <constraint firstItem="n2f-AX-hGn" firstAttribute="top" secondItem="8t4-HR-gud" secondAttribute="top" id="HzR-Ly-1WY"/>
+                <constraint firstItem="ime-Nx-6Vo" firstAttribute="width" secondItem="r7Y-QJ-JaZ" secondAttribute="width" id="KVk-5m-P4f"/>
+                <constraint firstItem="ydf-S5-lxe" firstAttribute="top" secondItem="8t4-HR-gud" secondAttribute="top" id="L0C-q7-PZ5"/>
+                <constraint firstItem="i4r-gE-h2t" firstAttribute="leading" secondItem="n2f-AX-hGn" secondAttribute="trailing" constant="10" id="OIZ-ad-go7"/>
+                <constraint firstAttribute="bottom" secondItem="n2f-AX-hGn" secondAttribute="bottom" id="QsO-SE-88m"/>
+                <constraint firstItem="ime-Nx-6Vo" firstAttribute="leading" secondItem="ydf-S5-lxe" secondAttribute="trailing" constant="10" id="SZm-PG-itJ"/>
+                <constraint firstItem="i4r-gE-h2t" firstAttribute="width" secondItem="r7Y-QJ-JaZ" secondAttribute="width" id="Ss8-sw-LhE"/>
+                <constraint firstItem="ime-Nx-6Vo" firstAttribute="top" secondItem="8t4-HR-gud" secondAttribute="top" id="WYy-Af-qvS"/>
+                <constraint firstItem="n2f-AX-hGn" firstAttribute="leading" secondItem="r7Y-QJ-JaZ" secondAttribute="trailing" constant="30" id="ZBb-ef-jKx"/>
+                <constraint firstItem="r7Y-QJ-JaZ" firstAttribute="leading" secondItem="8t4-HR-gud" secondAttribute="leading" id="ZGO-iA-KTN"/>
+                <constraint firstItem="r7Y-QJ-JaZ" firstAttribute="top" secondItem="8t4-HR-gud" secondAttribute="top" id="ZhX-ze-r85"/>
+                <constraint firstAttribute="bottom" secondItem="i4r-gE-h2t" secondAttribute="bottom" id="fjX-Bv-VLX"/>
+                <constraint firstItem="ydf-S5-lxe" firstAttribute="width" secondItem="r7Y-QJ-JaZ" secondAttribute="width" id="gWl-HC-qaF"/>
+                <constraint firstAttribute="trailing" secondItem="ime-Nx-6Vo" secondAttribute="trailing" constant="20" id="gav-Pj-woi"/>
+                <constraint firstAttribute="bottom" secondItem="r7Y-QJ-JaZ" secondAttribute="bottom" id="ih4-Oa-yUk"/>
+                <constraint firstItem="ydf-S5-lxe" firstAttribute="leading" secondItem="i4r-gE-h2t" secondAttribute="trailing" constant="10" id="uRK-ci-kOY"/>
+                <constraint firstItem="n2f-AX-hGn" firstAttribute="width" secondItem="r7Y-QJ-JaZ" secondAttribute="width" id="wQd-QF-M4q"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="messageBtn" destination="DEg-6n-r1X" id="3wM-rN-CAw"/>
+                <outlet property="top1BtnView" destination="n2f-AX-hGn" id="5eh-nR-bBJ"/>
+                <outlet property="top2BtnView" destination="i4r-gE-h2t" id="UW8-zF-uww"/>
+                <outlet property="top3BtnView" destination="ydf-S5-lxe" id="5Os-H9-Jzs"/>
+                <outlet property="top4BtnView" destination="ime-Nx-6Vo" id="OaD-Jw-GiJ"/>
+            </connections>
             <point key="canvasLocation" x="-27" y="-280"/>
         </view>
     </objects>
     <resources>
-        <image name="all" width="30" height="30"/>
+        <image name="mess" width="24" height="24"/>
     </resources>
 </document>
