--- a/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQEquipmentListCell.xib
+++ b/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQEquipmentListCell.xib
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="EquipmentListCell" rowHeight="178" id="KGk-i7-Jjw" customClass="YQEquipmentListCell" customModule="OpticalValleyUnite" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="349" height="178"/>
+            <rect key="frame" x="0.0" y="0.0" width="350" height="178"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="349" height="177.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="350" height="177.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XW7-P2-gaT">
-                        <rect key="frame" x="0.0" y="0.0" width="349" height="100"/>
+                        <rect key="frame" x="0.0" y="0.0" width="350" height="100"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XnI-70-KDY">
-                                <rect key="frame" x="10" y="10" width="334" height="18"/>
+                                <rect key="frame" x="10" y="10" width="335" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4lT-3d-BNO">
-                                <rect key="frame" x="89" y="40" width="255" height="18"/>
+                                <rect key="frame" x="89" y="40" width="256" height="18"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="15"/>
                                 <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
@@ -57,8 +57,8 @@
                         </constraints>
                     </view>
                     <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="CeL-3x-MvL">
-                        <rect key="frame" x="8" y="100" width="333" height="1"/>
-                        <color key="backgroundColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
+                        <rect key="frame" x="8" y="100" width="334" height="1"/>
+                        <color key="backgroundColor" red="0.80000001190000003" green="0.80000001190000003" blue="0.80000001190000003" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="1" id="gpv-YF-kLS"/>
                         </constraints>
@@ -87,15 +87,24 @@
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="PCC-xF-Uhc">
+                        <rect key="frame" x="0.0" y="172.5" width="350" height="5"/>
+                        <color key="backgroundColor" red="0.7019608021" green="0.7019608021" blue="0.7019608021" alpha="1" colorSpace="calibratedRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="5" id="Cus-5Z-rjL"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Hhy-br-8d8" firstAttribute="leading" secondItem="oYR-Hi-C3n" secondAttribute="trailing" constant="5" id="1B2-Ee-iSk"/>
                     <constraint firstAttribute="trailing" secondItem="XW7-P2-gaT" secondAttribute="trailing" id="BfA-EU-LKm"/>
                     <constraint firstItem="XW7-P2-gaT" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" id="Gco-Sz-Xpm"/>
+                    <constraint firstAttribute="bottom" secondItem="PCC-xF-Uhc" secondAttribute="bottom" id="HJx-e4-cFX"/>
                     <constraint firstItem="qzt-ZZ-gcH" firstAttribute="centerY" secondItem="xe0-8y-F73" secondAttribute="centerY" id="HfY-Ov-wbx"/>
                     <constraint firstItem="Hhy-br-8d8" firstAttribute="centerY" secondItem="oYR-Hi-C3n" secondAttribute="centerY" id="Iwn-ZW-k7a"/>
                     <constraint firstItem="oYR-Hi-C3n" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="JEJ-KH-KPO"/>
                     <constraint firstItem="CeL-3x-MvL" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="8" id="Lei-mc-mSC"/>
+                    <constraint firstItem="PCC-xF-Uhc" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="PpH-0N-xEU"/>
                     <constraint firstItem="xe0-8y-F73" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="10" id="UXY-5X-DdJ"/>
                     <constraint firstItem="xe0-8y-F73" firstAttribute="top" secondItem="oYR-Hi-C3n" secondAttribute="bottom" constant="10" id="V1Q-Z0-GJL"/>
                     <constraint firstItem="oYR-Hi-C3n" firstAttribute="top" secondItem="CeL-3x-MvL" secondAttribute="bottom" constant="10" id="WR6-jf-qlg"/>
@@ -103,6 +112,7 @@
                     <constraint firstItem="CeL-3x-MvL" firstAttribute="top" secondItem="XW7-P2-gaT" secondAttribute="bottom" id="guF-Rr-srJ"/>
                     <constraint firstItem="XW7-P2-gaT" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" id="nwh-p3-8Dr"/>
                     <constraint firstAttribute="trailing" secondItem="CeL-3x-MvL" secondAttribute="trailing" constant="8" id="p62-yI-P5r"/>
+                    <constraint firstAttribute="trailing" secondItem="PCC-xF-Uhc" secondAttribute="trailing" id="zd0-WE-iV1"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -111,7 +121,7 @@
                 <outlet property="equipmentNum" destination="4lT-3d-BNO" id="bZ5-qJ-CjO"/>
                 <outlet property="equpmentState" destination="qzt-ZZ-gcH" id="Sqx-XX-YJS"/>
             </connections>
-            <point key="canvasLocation" x="-43" y="47"/>
+            <point key="canvasLocation" x="-45" y="41"/>
         </tableViewCell>
     </objects>
 </document>
