--- a/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQOwnerAndTenantCell.xib
+++ b/OpticalValleyUnite/Classes/UI/HouseQuery/View/YQOwnerAndTenantCell.xib
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12118" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13771" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -19,37 +19,37 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="与业主关系:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="STQ-LQ-w8a">
-                        <rect key="frame" x="38" y="10" width="81" height="18"/>
+                        <rect key="frame" x="48" y="10" width="81" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="亲属姓名:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="S1y-xI-4sE">
-                        <rect key="frame" x="53" y="38" width="66" height="18"/>
+                        <rect key="frame" x="63" y="38" width="66" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="亲属电话:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iaT-WV-33u">
-                        <rect key="frame" x="53" y="66" width="66" height="18"/>
+                        <rect key="frame" x="63" y="66" width="66" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <color key="textColor" red="0.49803921579999999" green="0.49803921579999999" blue="0.49803921579999999" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JEE-Dn-WrP">
-                        <rect key="frame" x="129" y="10" width="37.5" height="18"/>
+                        <rect key="frame" x="139" y="10" width="37.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="w9E-CH-2rH">
-                        <rect key="frame" x="129" y="38" width="37.5" height="18"/>
+                        <rect key="frame" x="139" y="38" width="37.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="X69-FW-t5S">
-                        <rect key="frame" x="129" y="66" width="37.5" height="18"/>
+                        <rect key="frame" x="139" y="66" width="37.5" height="18"/>
                         <fontDescription key="fontDescription" type="system" pointSize="15"/>
                         <nil key="textColor"/>
                         <nil key="highlightedColor"/>
@@ -60,7 +60,7 @@
                     <constraint firstItem="iaT-WV-33u" firstAttribute="top" secondItem="S1y-xI-4sE" secondAttribute="bottom" constant="10" id="6rM-Vf-cyb"/>
                     <constraint firstItem="JEE-Dn-WrP" firstAttribute="centerY" secondItem="STQ-LQ-w8a" secondAttribute="centerY" id="Fjm-Ad-KaF"/>
                     <constraint firstItem="S1y-xI-4sE" firstAttribute="trailing" secondItem="STQ-LQ-w8a" secondAttribute="trailing" id="M6D-iK-rLa"/>
-                    <constraint firstItem="STQ-LQ-w8a" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" constant="-120" id="R5h-3h-D0K"/>
+                    <constraint firstItem="STQ-LQ-w8a" firstAttribute="centerX" secondItem="H2p-sc-9uM" secondAttribute="centerX" constant="-110" id="R5h-3h-D0K"/>
                     <constraint firstItem="w9E-CH-2rH" firstAttribute="centerY" secondItem="S1y-xI-4sE" secondAttribute="centerY" id="RkV-TJ-vkH"/>
                     <constraint firstItem="X69-FW-t5S" firstAttribute="centerY" secondItem="iaT-WV-33u" secondAttribute="centerY" id="bT3-kj-1fx"/>
                     <constraint firstItem="STQ-LQ-w8a" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="hKL-Jr-VJE"/>
