全部改版退拽功能init,调试测试;

--- a/OpticalValleyUnite/Classes/UI/Home/SystemSelection/ViewController/YQSystemSelectionVC.xib
+++ b/OpticalValleyUnite/Classes/UI/Home/SystemSelection/ViewController/YQSystemSelectionVC.xib
@@ -55,7 +55,7 @@
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="yo6-gH-MBQ" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                    <rect key="frame" x="10" y="216.5" width="127" height="128"/>
+                                    <rect key="frame" x="10" y="216.5" width="127.5" height="128"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <gestureRecognizers/>
                                     <constraints>
@@ -63,41 +63,41 @@
                                     </constraints>
                                 </view>
                                 <view tag="1" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="lAD-4L-nfb" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                    <rect key="frame" x="147" y="216" width="128" height="128"/>
+                                    <rect key="frame" x="147.5" y="216" width="127" height="128"/>
+                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                    <gestureRecognizers/>
+                                </view>
+                                <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DAg-Us-bGj" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                    <rect key="frame" x="284" y="216" width="127.5" height="128"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <gestureRecognizers/>
                                 </view>
                                 <view tag="3" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="a7J-NL-baW" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                    <rect key="frame" x="10" y="354.5" width="127" height="128"/>
+                                    <rect key="frame" x="10" y="354.5" width="127.5" height="128"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <gestureRecognizers/>
                                 </view>
                                 <view tag="4" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4PL-4r-Cek" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                    <rect key="frame" x="147" y="354.5" width="128" height="128"/>
+                                    <rect key="frame" x="147.5" y="354.5" width="127" height="128"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <gestureRecognizers/>
                                 </view>
                                 <view tag="5" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="UmP-29-bpJ" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                    <rect key="frame" x="285" y="354.5" width="127" height="128"/>
+                                    <rect key="frame" x="284.5" y="354.5" width="127.5" height="128"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     <gestureRecognizers/>
                                 </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HXQ-UN-1Kg" userLabel="Seven View" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                    <rect key="frame" x="10" y="492.5" width="127" height="128"/>
+                                <view tag="6" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="HXQ-UN-1Kg" userLabel="Seven View" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                    <rect key="frame" x="10" y="492.5" width="127.5" height="128"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rlI-dy-5ig" userLabel="Eight View" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                    <rect key="frame" x="147" y="492.5" width="128" height="128"/>
+                                <view tag="7" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="rlI-dy-5ig" userLabel="Eight View" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                    <rect key="frame" x="147.5" y="492.5" width="127" height="128"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </view>
-                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eV0-e2-aQp" userLabel="Nine View" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                    <rect key="frame" x="285" y="492.5" width="127" height="128"/>
+                                <view tag="8" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eV0-e2-aQp" userLabel="Nine View" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
+                                    <rect key="frame" x="284.5" y="492.5" width="127.5" height="128"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </view>
-                                <view tag="2" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="DAg-Us-bGj" customClass="YQSystemView" customModule="OpticalValleyUnite" customModuleProvider="target">
-                                    <rect key="frame" x="285" y="216" width="127" height="128"/>
-                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                    <gestureRecognizers/>
                                 </view>
                             </subviews>
                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
@@ -155,7 +155,7 @@
                     </constraints>
                 </scrollView>
             </subviews>
-            <color key="backgroundColor" red="0.90196079019999997" green="0.90196079019999997" blue="0.90196079019999997" alpha="1" colorSpace="calibratedRGB"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <constraints>
                 <constraint firstItem="iSa-LG-w2d" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="YrN-TH-feB"/>
                 <constraint firstItem="F0Z-vm-IjV" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="csp-Hh-XOu"/>
