工单查询筛选功能,筛选条件筛选正常;连续点击的人员UI架构的优化调整调试;

--- a/OpticalValleyUnite/Classes/UI/AllWorkUnitQuery/ViewController/YQAllWorkUnitScreen.storyboard
+++ b/OpticalValleyUnite/Classes/UI/AllWorkUnitQuery/ViewController/YQAllWorkUnitScreen.storyboard
@@ -57,7 +57,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eJK-Uq-SAS">
+                                    <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eJK-Uq-SAS">
                                         <rect key="frame" x="139" y="72" width="263" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="dfe-ys-srA"/>
@@ -125,7 +125,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bwq-pr-Ipk">
+                                    <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="bwq-pr-Ipk">
                                         <rect key="frame" x="139" y="169" width="263" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="66m-Q3-8AA"/>
