--- a/OpticalValleyUnite/Classes/UI/WorkOrder/ViewController/WorkOrder.storyboard
+++ b/OpticalValleyUnite/Classes/UI/WorkOrder/ViewController/WorkOrder.storyboard
@@ -1834,7 +1834,7 @@
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <textField opaque="NO" clipsSubviews="YES" alpha="0.10000000000000001" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ut2-kN-cKC">
+                                    <textField opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" alpha="0.10000000000000001" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ut2-kN-cKC">
                                         <rect key="frame" x="139" y="87" width="263" height="35"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="35" id="fbf-Dk-klI"/>
