--- a/OpticalValleyUnite/Classes/UI/GeneralManagerMailbox/ViewController/YQGenaralFeedBackDetailVC.xib
+++ b/OpticalValleyUnite/Classes/UI/GeneralManagerMailbox/ViewController/YQGenaralFeedBackDetailVC.xib
@@ -108,7 +108,7 @@
                                             <rect key="frame" x="0.0" y="0.0" width="364" height="40"/>
                                             <subviews>
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="处理答复:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="usq-bh-BFj">
-                                                    <rect key="frame" x="15" y="10" width="74" height="21"/>
+                                                    <rect key="frame" x="0.0" y="10" width="74" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <nil key="textColor"/>
                                                     <nil key="highlightedColor"/>
@@ -117,7 +117,7 @@
                                             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                             <constraints>
                                                 <constraint firstItem="usq-bh-BFj" firstAttribute="centerY" secondItem="oWw-hq-AXb" secondAttribute="centerY" id="IwY-uB-VYa"/>
-                                                <constraint firstItem="usq-bh-BFj" firstAttribute="leading" secondItem="oWw-hq-AXb" secondAttribute="leading" constant="15" id="OaB-sV-nkc"/>
+                                                <constraint firstItem="usq-bh-BFj" firstAttribute="leading" secondItem="oWw-hq-AXb" secondAttribute="leading" id="OaB-sV-nkc"/>
                                                 <constraint firstAttribute="height" constant="40" id="rPR-eQ-SWs"/>
                                             </constraints>
                                         </view>
